--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </div>
     <div class="bottom">
       <div class="div3">
-        <h1 class="he1"align="center">My Experience And Certicate</h1>
+        <h1 class="he1"align="center">My Experience And Certificate</h1>
       <p class="p3">  I design ethical websites that inspires people to engage with your mission and suport the cause you care about.
       when I was in college I complete certifction program in Full Stack Development and then i got opportunity to inernship on  project Ecommerce Website. In this internship I learned technology like HTML HTML5 CSS BOOTSTRAP Javascript and PHP.</p>
 
