--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@
       </div>
       <div class="div4">
         <h1 class="he1"align="center"> Interests and Hobbies</h1>
-        <p class="p3">Seeking a role to enhance and explore my technical knowledge. I have completed my graduation in B.Tech(EC) from Pranveer Singh Institute of Technology
-In my Final year of the college I got placed in Micromax in this company I learnt technology like POST AOI ,PRE AOI, quality assurance and about pcb plate programming.
-My hobbies are Travelling and eating around the world in my way.</p>
+        <p class="p3">I have completed my graduation in B.Tech(EC) from Pranveer Singh Institute of Technology. In my Final year of the college I got placed in Micromax in this company I learnt technology like POST AOI ,PRE AOI, quality assurance and about pcb plate programming. My hobbies are Travelling and eating around the world in my way.</p>
 
       </div>
 
